// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountEditModal Component should render a non-connected component 1`] = `
<div
  role="dialog"
>
  <div
    class="fade modal-backdrop in"
  />
  <div
    class="fade in modal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class="modal-header"
        >
          <button
            aria-hidden="true"
            aria-label="Close"
            class="close btn btn-default"
            type="button"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-close"
            />
          </button>
          <h4
            class="modal-title"
          >
            Edit Account - undefined
          </h4>
        </div>
        <div
          class="modal-body"
        />
        <div
          class="container-fluid"
        >
          <form
            autocomplete="off"
            class="form-horizontal"
            method="post"
          >
            <div
              class="form-group"
            >
              <label
                class="col-sm-3 control-label"
                for="edit-account-name"
              >
                Account Name
              </label>
              <div
                class="col-sm-9"
              >
                <input
                  class="form-control"
                  id="edit-account-name"
                  maxlength="256"
                  name="accountName"
                  placeholder="Enter a name for this account"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn-cancel btn btn-default"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`connected 1`] = `
<AccountEditModal
  account={Object {}}
  error={false}
  errorMessage={null}
  pending={false}
  show={true}
  updateAccountField={[Function]}
/>
`;

exports[`display error state 1`] = `
<div
  role="dialog"
>
  <div
    class="fade modal-backdrop in"
  />
  <div
    class="fade in modal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class="modal-header"
        >
          <button
            aria-hidden="true"
            aria-label="Close"
            class="close btn btn-default"
            type="button"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-close"
            />
          </button>
          <h4
            class="modal-title"
          >
            Edit Account - undefined
          </h4>
        </div>
        <div
          class="modal-body"
        />
        <div
          class="container-fluid"
        >
          <div
            class="alert alert-danger"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-error-circle-o"
            />
            <strong>
              Error
            </strong>
             
          </div>
          <form
            autocomplete="off"
            class="form-horizontal"
            method="post"
          >
            <div
              class="form-group"
            >
              <label
                class="col-sm-3 control-label"
                for="edit-account-name"
              >
                Account Name
              </label>
              <div
                class="col-sm-9"
              >
                <input
                  class="form-control"
                  id="edit-account-name"
                  maxlength="256"
                  name="accountName"
                  placeholder="Enter a name for this account"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn-cancel btn btn-default"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`display pending state 1`] = `
<div
  role="dialog"
>
  <div
    class="fade modal-backdrop in"
  />
  <div
    class="fade in modal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class="modal-header"
        >
          <button
            aria-hidden="true"
            aria-label="Close"
            class="close btn btn-default"
            type="button"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-close"
            />
          </button>
          <h4
            class="modal-title"
          >
            Edit Account - undefined
          </h4>
        </div>
        <div
          class="modal-body"
        />
        <div
          class="container-fluid"
        >
          <div
            class="blank-slate-pf-icon spinner spinner-lg"
          />
          <div
            class="text-center"
          >
            Account updating...
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn-cancel btn btn-default"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`expected form error 1`] = `
Object {
  "accountName": "",
  "accountNameError": "Enter minimum of 3 characters for account name",
  "formTouched": true,
  "formValid": false,
  "resourceType": "AwsAccount",
}
`;

exports[`expected form valid 1`] = `
Object {
  "accountName": "lorem ipsum",
  "accountNameError": "",
  "formTouched": true,
  "formValid": true,
  "resourceType": "AwsAccount",
}
`;
